layout bugs

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,10 @@
     #gallery li {
 		font-size: 1.15rem;
     }
+
+    /*.gal-info {
+    	margin-bottom: default;
+    }*/
 }
 
 @media only screen and (min-width: 700px) {
