--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ nav .selected {
 
 }
 
+
 .galleryInfo {
   	float: right;
   	width: 50%;
@@ -123,6 +124,8 @@ nav .selected {
   	padding: 0;
   	font-size: 0.75em;
   	color: #000;
+  	display: flex;
+  	flex-direction: column;
 }
 
 
@@ -131,6 +134,13 @@ nav .selected {
   	margin-right: 0.5em;
   	color: #fff;
   	line-height: 1.15rem;
+  	/*margin: 0 0 0;*/
+}
+h3.gal-info {
+	box-sizing: border-box;
+	padding-bottom: .35em;
+	margin-bottom: .35em;
+	border-bottom: 1px solid #445362;
 }
 
 p.gal-info {
@@ -175,7 +185,7 @@ FOOTER
 	flex-wrap: wrap;
 	justify-content: center;
 	background-color: #2E8AE6;
-	padding: 3em auto;
+	padding: 3em;
 	margin-top: 0;
 	margin-bottom: 0;
 }
